--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,11 @@
 	<packaging>war</packaging>
 	<version>1.0.0</version>
 	<properties>
-		<java-version>1.6</java-version>
-		<org.springframework-version>3.1.1.RELEASE</org.springframework-version>
-		<org.aspectj-version>1.6.10</org.aspectj-version>
-		<org.slf4j-version>1.6.6</org.slf4j-version>
-		<pi4j.project.version>0.0.5</pi4j.project.version>
+		<java-version>1.8</java-version>
+		<org.springframework-version>4.2.1.RELEASE</org.springframework-version>
+		<org.aspectj-version>1.8.7</org.aspectj-version>
+		<org.slf4j-version>1.7.12</org.slf4j-version>
+		<pi4j.project.version>5.0.1-SNAPSHOT</pi4j.project.version>
 	</properties>
 	<dependencies>
 		<!-- Spring -->
@@ -129,6 +129,16 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.1</version>
+				<configuration>
+					<url>http://192.168.15.6:8080/manager</url>
+					<server>RPITomcatServer</server>
+					<path>/automation</path>
+				</configuration>
+			</plugin>
+			<plugin>
 				<artifactId>maven-eclipse-plugin</artifactId>
 				<version>2.9</version>
 				<configuration>
@@ -147,21 +157,11 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.5.1</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.8</source>
+					<target>1.8</target>
 					<compilerArgument>-Xlint:all</compilerArgument>
 					<showWarnings>true</showWarnings>
 					<showDeprecation>true</showDeprecation>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.tomcat.maven</groupId>
-				<artifactId>tomcat6-maven-plugin</artifactId>
-				<version>2.2</version>
-				<configuration>
-					<url>http://192.168.15.115:8080/manager</url>
-					<server>RPITomcatServer</server>
-					<path>/automation</path>
 				</configuration>
 			</plugin>
 		</plugins>
